--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>FashionGAN</title>
 </head>
-<body>
-    
+<body style="text-align: center; font-family: sans-serif;">
+    <h1>🧥 Generated Fashion Image</h1>
+    <img src="{{ image_path }}?v={{ random() }}" alt="Generated Image">
+    <p><a href="/">🔁 Generate New Image</a></p>
 </body>
 </html>
